lustre/osd-ldiskfs/osd_handler.c
@@ -6766,7 +6766,7 @@ static int osd_mount(const struct lu_env *env,
 	/* Glom up mount options */
 	if (*options != '\0')
 		strcat(options, ",");
-	strlcat(options, "no_mbcache", PAGE_SIZE);
+	strlcat(options, "no_mbcache,nodelalloc", PAGE_SIZE);
 
 	type = get_fs_type("ldiskfs");
 	if (!type) {
